--- a/package.json
+++ b/package.json
@@ -7,6 +7,23 @@
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
   },
+  "devDependencies": {
+    "classnames": "2.2.6",
+    "redux": "^4.0.1",
+    "redux-saga": "^1.0.1",
+    "redux-actions": "^2.6.4",
+    "reselect": "^4.0.0",
+    "node-fetch": "^2.3.0",
+    "react-router-redux": "^4.0.8",
+    "react-redux": "^6.0.1",
+    "react-router": "^4.3.1",
+    "redux-thunk": "^2.3.0",
+    "history": "^4.9.0",
+    "immutable": "^4.0.0-rc.12",
+    "prop-types": "^15.7.2",
+    "lodash": "^4.17.11",
+    "recharts": "1.6.2"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
